sgd/reproduction/playground/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Entitlement_Type__c</fullName>
        <description>This is for internal use,  and this is set to &apos;Auto&apos; by Auto-Entitlement or set to &apos;Interactive&apos; in interactive entitlement.</description>
        <inlineHelpText>This is for internal use,  and this is set to &apos;Auto&apos; by Auto-Entitlement or set to &apos;Interactive&apos; in interactive entitlement.</inlineHelpText>
        <label>Entitlement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>INTERACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Customer_By__c</fullName>
        <label>Initial Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be initial responsed as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be initial responsed as per internal commitment in SLA.</inlineHelpText>
        <label>Initial Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Entitlement_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitlement Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_PM_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PM Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_SLA_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Service_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Customer_By__c</fullName>
        <label>Onsite Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</inlineHelpText>
        <label>Onsite Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__PM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preventive Maintenance Plan</label>
        <referenceTo>SVMXC__PM_Plan__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Perform_Auto_Entitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform Auto Entitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_End_Time__c</fullName>
        <description>End time for the case to be scheduled. Calculated automatically based on booking window selection.</description>
        <inlineHelpText>End time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
        <label>Preferred End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Start_Time__c</fullName>
        <description>Start time for the case to be scheduled. Calculated automatically based on booking window selection.</description>
        <inlineHelpText>Start time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
        <label>Preferred Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product for which customer is seeking support. Reference to Product2 object.</description>
        <inlineHelpText>Choose or enter the Product name for which the customer is seeking support.</inlineHelpText>
        <label>Component Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Proforma_Invoice_Amount__c</fullName>
        <label>Proforma Invoice Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Proforma_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proforma Invoice</label>
        <referenceTo>SVMXC__Proforma_Invoice__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Resolution_Customer_By__c</fullName>
        <label>Resolution Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Resolution_Internal_By__c</fullName>
        <description>Date/time by which customer should be resolved as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be resolved as per internal commitment in SLA.</inlineHelpText>
        <label>Resolution Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Restoration_Customer_By__c</fullName>
        <label>Restoration Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Restoration_Internal_By__c</fullName>
        <description>Date/time by which customer should be restored as per internal commitment in SLA.</description>
        <inlineHelpText>Date/time by which customer should be restored as per internal commitment in SLA.</inlineHelpText>
        <label>Restoration Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SContract_Business_Hour__c</fullName>
        <formula>CASESAFEID(SVMXC__Service_Contract__r.SVMXC__Business_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SContract Business Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Extension_Minutes__c</fullName>
        <label>SLA Clock Extension Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Days__c</fullName>
        <label>SLA Clock Pause Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Hours__c</fullName>
        <label>SLA Clock Pause Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Minutes__c</fullName>
        <label>SLA Clock Pause Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Reason__c</fullName>
        <label>SLA Clock Pause Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Restart_Time__c</fullName>
        <label>SLA Clock Pause Restart Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Time__c</fullName>
        <label>SLA Clock Pause Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Clock Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Level the customer is entitled to by this contract. Is a lookup to an existing service level record.</description>
        <inlineHelpText>Service Level the customer is entitled to by this contract. Is a lookup to an existing service level record.</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</description>
        <inlineHelpText>Name of the service contract. Is a lookup to an existing service contract in ServiceMax</inlineHelpText>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer location where the contact is reporting the problem or the location of the installed product.</description>
        <inlineHelpText>The customer location where the contact is reporting the problem or the location of the installed product.</inlineHelpText>
        <label>Site</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Cases Reported From This Site</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Initial_Response__c</fullName>
        <description>Time taken to initial response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to initial response as per commitment in SLA.</inlineHelpText>
        <label>Time to Initial Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Onsite_Response__c</fullName>
        <description>Time taken to onsite response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to onsite response as per commitment in SLA.</inlineHelpText>
        <label>Time to Onsite Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Resolve__c</fullName>
        <description>Time taken to resolve as per commitment in SLA.</description>
        <inlineHelpText>Time taken to resolve as per commitment in SLA.</inlineHelpText>
        <label>Time to Resolve (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Restore__c</fullName>
        <description>Time taken to restore as per commitment in SLA.</description>
        <inlineHelpText>Time taken to restore as per commitment in SLA.</inlineHelpText>
        <label>Time to Restore (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</description>
        <inlineHelpText>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</inlineHelpText>
        <label>Product/System</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Cases (Top-Level)</relationshipLabel>
        <relationshipName>Case2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Warranty</description>
        <inlineHelpText>Product Warranty</inlineHelpText>
        <label>Warranty</label>
        <referenceTo>SVMXC__Warranty__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ケースの営業担当者</description>
        <label>営業担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesUserforCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SuppliedAddress__c</fullName>
        <label>住所</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedCity__c</fullName>
        <label>都道府県</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedCode__c</fullName>
        <label>郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppliedsection__c</fullName>
        <label>部署</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>SuppliedCity__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>すべての進行中ケース</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_All_Opportunity_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>SMAX_PS_SoldTo__c</columns>
        <columns>SMAX_PS_SoldTo_Contact__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>SMAX_PS_SAP_SalesOffice__c</columns>
        <columns>SuppliedCity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SMAX_PS_ServiceOpportunity</value>
        </filters>
        <label>引合ケース</label>
        <sharedTo>
            <group>SMAX_PS_HTS_Other_Object_R_W</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_All_Service_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>SMAX_PS_SoldTo__c</columns>
        <columns>SMAX_PS_SoldTo_Contact__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>SMAX_PS_SAP_SalesOffice__c</columns>
        <columns>SuppliedCity__c</columns>
        <columns>SMAX_PS_FollowupDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SMAX_PS_ServiceCase</value>
        </filters>
        <label>問合せケース</label>
        <sharedTo>
            <group>SMAX_PS_HTS_Other_Object_R_W</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View2</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.COMPANY</columns>
        <columns>CASES.NAME</columns>
        <columns>SuppliedCity__c</columns>
        <columns>Detail__c</columns>
        <columns>SalesUser__c</columns>
        <columns>ProductCategory__c</columns>
        <filterScope>Mine</filterScope>
        <label>営業確認用</label>
        <sharedTo>
            <group>STEC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View3</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ProductCategory__c</columns>
        <columns>SuppliedCity__c</columns>
        <columns>CASES.COMPANY</columns>
        <columns>CASES.NAME</columns>
        <columns>Category2__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email,Phone,電話,電話（フリーダイヤル）,Web,営業サポート</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>高橋,正田,野口,林,白水</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold,Escalated,Closed,New,新規</value>
        </filters>
        <label>カスタマーサポート確認用</label>
        <sharedTo>
            <group>STEC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Web</fullName>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>SalesUser__c</columns>
        <columns>ProductCategory__c</columns>
        <columns>SuppliedCity__c</columns>
        <columns>SuppliedAddress__c</columns>
        <columns>CASES.COMPANY</columns>
        <columns>Detail__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Web</value>
        </filters>
        <label>Web問合せ</label>
        <sharedTo>
            <group>STEC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>call</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>SuppliedCity__c</columns>
        <columns>CASES.COMPANY</columns>
        <columns>CASES.NAME</columns>
        <columns>Category2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Phone,電話,電話（フリーダイヤル）</value>
        </filters>
        <label>電話問い合わせ</label>
        <sharedTo>
            <group>STEC</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>SMAX_PS_ServiceCase</fullName>
        <active>true</active>
        <businessProcess>SMAX PS Service Case</businessProcess>
        <label>Service Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMAX_PS_ServiceOpportunity</fullName>
        <active>true</active>
        <businessProcess>SMAX PS Service Opportunities</businessProcess>
        <label>Service Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Check_Close_Case</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 OR(RecordType.DeveloperName = &apos;SMAX_PS_ServiceCase&apos;, 
				RecordType.DeveloperName = &apos;SMAX_PS_ServiceOpportunity&apos;),
				OR(OR(ISPICKVAL(PRIORVALUE(Status),&apos;Closed&apos;),ISPICKVAL(PRIORVALUE(Status),&apos;Lost&apos;)
							),
				AND(
        NOT(ISCHANGED( Status)),
        OR( ISPICKVAL(Status,  &apos;Closed&apos;),  
           ISPICKVAL(Status,  &apos;Lost&apos;)
        )))
)</errorConditionFormula>
        <errorMessage>完了・失注ケースを変更できません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_SoldTo</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
 AND(
 OR(RecordType.DeveloperName = &apos;SMAX_PS_ServiceCase&apos;,
      RecordType.DeveloperName = &apos;SMAX_PS_ServiceOpportunity&apos;),
 NOT(ISBLANK(SMAX_PS_SoldTo__c)),
 OR(
  ISBLANK(SMAX_PS_SoldTo__r.SMAX_PS_SoldtoFlag__c ),
  ISNULL(SMAX_PS_SoldTo__r.SMAX_PS_SoldtoFlag__c ))),
 true, false)</errorConditionFormula>
        <errorMessage>SAP注文種設定をしている得意先を受注先 - (販社)に設定ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Location_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT( ISBLANK(SVMXC__Site__c))  , 
 IF( 
   OR (SVMXC__Site__r.SVMXC__Account__c &lt;&gt;  AccountId ,
         SVMXC__Site__r.SVMXC__Parent__c &lt;&gt; null), true, false))</errorConditionFormula>
        <errorDisplayField>SVMXC__Site__c</errorDisplayField>
        <errorMessage>Case取引先の第1階層の設置場所を選択ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_Account_or_WebCompany</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR($RecordType.Name=&quot;Service Case&quot;,$RecordType.Name=&quot;Service Opportunity&quot;),
AND(AccountId=null,SuppliedCompany = null)
)</errorConditionFormula>
        <errorMessage>取引先もしくは会社名を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_ComplaintJudge</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name=&quot;Service Case&quot;,
AND(ISPICKVAL(SMAX_PS_Segment__c,&quot;3&quot; ) ,ISPICKVAL(SMAX_PS_ComplaintJudge__c,&quot;&quot;))
)</errorConditionFormula>
        <errorMessage>苦情判断を選択してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_ComplaintReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name=&quot;Service Case&quot;,
 AND(NOT(ISPICKVAL(SMAX_PS_ComplaintJudge__c,&quot;&quot;)), 
  (ISPICKVAL(SMAX_PS_ComplaintReason__c ,&quot;&quot;))
)
)</errorConditionFormula>
        <errorMessage>苦情原因を選択してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_Contact_or_Last_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR($RecordType.Name=&quot;Service Case&quot;,$RecordType.Name=&quot;Service Opportunity&quot;),
AND(ContactId= null, SMAX_PS_LastName__c = null)  
)</errorConditionFormula>
        <errorMessage>取引先責任者もしくは氏名を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_Email_or_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 OR(
  $RecordType.Name=&quot;Service Case&quot;,
  $RecordType.Name=&quot;Service Opportunity&quot;
 ),
 AND(
  ContactId = null,
  SuppliedEmail=null,
  SuppliedPhone = null
 )
)</errorConditionFormula>
        <errorMessage>メールもしくは電話番号を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_LostReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name=&quot;Service Opportunity&quot;,
 AND(ISPICKVAL(Status,&quot;Lost&quot;),
   OR(ISPICKVAL(SMAX_PS_LostReason__c ,&quot;&quot;),  ISBLANK(SMAX_PS_LostReasonTxt__c) )
 )
)</errorConditionFormula>
        <errorMessage>失注の場合、失注理由と詳細を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_Supplied_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR($RecordType.Name=&quot;Service Case&quot;,$RecordType.Name=&quot;Service Opportunity&quot;),
AND( AccountId =null, SuppliedCity__c&lt;&gt;null,SuppliedAddress__c = null)
  )</errorConditionFormula>
        <errorMessage>住所を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_TargetProductCategory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND($RecordType.Name=&quot;Service Case&quot;,
ISPICKVAL(SMAX_PS_Segment__c,&quot;3&quot;),
ISCHANGED(Status),
ISPICKVAL(Status,&quot;Closed&quot;)
),
ISPICKVAL(SMAX_PS_TargetProductCategory__c,&quot;&quot;)
				
)</errorConditionFormula>
        <errorMessage>対象製品カテゴリを選択してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_TargetProductDetails</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR($RecordType.Name=&quot;Service Case&quot;,$RecordType.Name=&quot;Service Opportunity&quot;),
AND(NOT(ISPICKVAL(SMAX_PS_TargetProductCategory__c,&quot;&quot;)),ISPICKVAL(SMAX_PS_TargetProductDetailsCategory__c,&quot;&quot;))
  )</errorConditionFormula>
        <errorMessage>対象製品詳細カテゴリを選択してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Validate_Opp_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  OR(
     DATEVALUE(SMAX_PS_StartDateTime__c)  &gt;  SMAX_PS_FollowupDate__c ,
     DATEVALUE(SMAX_PS_StartDateTime__c) &gt;   SMAX_PS_OrderDate__c ,
     SMAX_PS_FollowupDate__c &gt;  SMAX_PS_OrderDate__c 
 ), true, false  )</errorConditionFormula>
        <errorMessage>日付入力に不正があります。受注予定日&gt;フォローアップ予定日＞開始日時になるように入力してください。</errorMessage>
    </validationRules>
</CustomObject>